--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link rel="stylesheet" type="text/css" href="css/estilos.css">
     <title>Site PowerPoint</title>
 </head>
 <body class="tipo13">
@@ -15,8 +15,8 @@
         
         O pacote inclui programas para edição de textos, apresentação de slides, controle de planilhas, gestão de banco de dados e criação de portais corporativos, por exemplo. O escopo é enorme. </p>
     <p>Visto isso explicaremos um pouco mais sobre cada um dos programas. Para acessar essas informações clique na imagem abaixo</p>
-   <center><a href="powerpoint.html"><img widht="200px" height="250px" src="imagens/powerpoint.png"></a>
-    <a href="word.html"><img widht="200px" height="250px" src="imagens/word-logo.png"></a>
-    <a href="exel.html"><img widht="200px" height="250px" src="imagens/exel.png"></a></center>
+   <center><a href="src/powerpoint.html"><img widht="200px" height="250px" src="imagens/powerpoint.png"></a>
+    <a href="src/word.html"><img widht="200px" height="250px" src="imagens/word-logo.png"></a>
+    <a href="src/exel.html"><img widht="200px" height="250px" src="imagens/exel.png"></a></center>
 </body>
 </html>
